# simple_pirate_sim

./: .gitignore  Cargo.toml  Clippy.toml  collision_resolution.md  readme.md  todo.md
crates/bevy/: Cargo.toml
crates/bevy/src/: lib.rs
crates/pirate_sim_console/: Cargo.toml
crates/pirate_sim_console/src/: basic_commands.rs  io.rs  lib.rs  registration.rs
crates/pirate_sim_controllers/: Cargo.toml
crates/pirate_sim_controllers/src/: lib.rs  player.rs
crates/pirate_sim_core/: Cargo.toml
crates/pirate_sim_core/src/: goals.rs  lib.rs  random.rs  system_sets.rs  test.rs  tile_grid.rs  utils.rs
crates/pirate_sim_game/: Cargo.toml
crates/pirate_sim_game/src/: basic_commands.rs  lib.rs  tile_objects.rs
crates/pirate_sim_game/src/ships/: creation.rs  mod.rs
crates/pirate_sim_physics/: Cargo.toml
crates/pirate_sim_physics/src/: collider.rs  collision.rs  lib.rs  movement.rs  test.rs  tile_cast.rs  velocity.rs
crates/pirate_sim_physics/src/test/: mod.rs
docs/physics/: collision_events.md
src/: basic_commands.rs  controllers.rs  gui.rs  main.rs  physics.rs  random.rs  ships.rs  test.rs  tile_grid.rs  tile_objects.rs
src/console/: basic_commands.rs  io.rs  mod.rs  registration.rs
src/controllers/: mod.rs  player.rs
src/physics/: collider.rs  mod.rs  movement.rs  tile_cast.rs  velocity.rs
src/ships/: creation.rs  mod.rs
