[package]
name = "bevy_simple_test"
version = "0.1.0"
edition = "2021"

# speed improvements for dev builds. opt-level assumes we won't be debugging dependencies,
# and rustflags assumes we won't be building in dev mode for distribution.
[profile.dev.package."*"]
opt-level = 3
# rustflags = ["-C","target-cpu=+sse3"] # we can assume everybody has sse3

[profile.release]
lto = "thin"

[dependencies]
# bevy dependency below
bevy-inspector-egui = {version = "0.19"}
bracket-random = "0.8"
thiserror = "1.0"

[dependencies.bevy]
version = "0.11"
default-features = false
features = [
  # if you add dynamic linking, remember not to commit

  # instead of dynamic linking, if working on linux, on a fairly recent computer I recommend using 
  # mold linker. I have found that recompiling debug with mold and rust 1.69 
  # has nearly negligible speed differences from recompiling debug with dynamic_lib
  # (likely because of newly enabled incremental builds)  

  # bevy features we (probably) make use of 
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_winit",
  "bevy_ui",
  "subpixel_glyph_atlas",
  "multi-threaded",

  "png", 

  # support both to be safe. If you're building for yourself you probably know which one to remove
  "x11",
  "wayland"
]
