[package]
name = "bevy"
version = "0.11.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
trace_chrome = ["bevy/trace_chrome"]
# trace_tracey = ["bevy/trace_tracey"]

[dependencies.bevy]
version = "0.11"
default-features = false
features = [
  # if you add dynamic linking, remember not to commit

  # instead of dynamic linking, if working on linux, on a fairly recent computer I recommend using 
  # mold linker. I have found that recompiling debug with mold and rust 1.69 
  # has nearly negligible speed differences from recompiling debug with dynamic_lib
  # (likely because of newly enabled incremental builds)  

  # bevy features we (probably) make use of 
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_winit",
  "bevy_ui",
  # "bevy_gizmos",
  "subpixel_glyph_atlas",
  "multi-threaded",

  "png", 

  # support both to be safe. If you're building for yourself you probably know which one to remove
  "x11",
  "wayland"
]
