[package]
name = "pirate_sim_console"
version = "0.1.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
pirate_sim_core = { path = "../pirate_sim_core", version = "0.1.0-dev"}

bevy = {path = "../bevy", version = "0.11"}
