[package]
name = "pirate_sim_game"
version = "0.1.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["developer-tools"]
developer-tools = ["dep:pirate_sim_console", "pirate_sim_physics/developer-tools"]

[dependencies]
pirate_sim_console = {path = "../pirate_sim_console", version = "0.1.0-dev",optional = true}
pirate_sim_core = {path = "../pirate_sim_core", version = "0.1.0-dev"}
pirate_sim_physics = {path = "../pirate_sim_physics", version = "0.1.0-dev"}
pirate_sim_controllers = {path = "../pirate_sim_controllers", version = "0.1.0-dev"}
bevy = {path = "../bevy"}
